# pykwalify-webform

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  RELEASE.md  __init__.py  data.yaml  out.html  pyproject.toml  schema.yaml  setup.py
.github/workflows/: main.yml
osgameclones/: game.html  original.html
pykwalify-webform/: __init__.py  __main__.py  renderer.py
pykwalify_webform/: __main__.py  renderer.py
pykwalify_webform/templates/: page.jinja2
pykwalify_webform/templates/types/: str.jinja2
static/: main.js
templates/: form_group.jinja2  page.jinja2
templates/types/: any.jinja2  date.jinja2  int.jinja2  seq.jinja2  str.jinja2
