[project]
name = "pykwalify-webform"
authors = [
  {name = "congusbongus", email = "congusbongus@gmail.com"},
]
license = {file = "LICENSE"}
version = "0.2.2"
description = "Generate webforms based on YAML schema with pykwalify"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.5",
    "pykwalify>=1.8.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
pykwalify_webform = "pykwalify_webform.__main__:main"

[project.urls]
Repository = "https://github.com/cxong/pykwalify-webform"

[dependency-groups]
dev = [
    "twine>=4.0.2",
]
